<resources>
    <string name="app_name">SkillCinema</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dot">.</string>
    <string name="skillcinema">ПоискКино</string>
    <string name="skip">Пропустить</string>
    <string name="premiers">Премьеры</string>
    <string name="all">Все</string>
    <string name="popular">Популярные</string>
    <string name="actionUSA">Боевики США</string>
    <string name="top250">ТОП 250</string>
    <string name="france_drams">Драмы Франции</string>
    <string name="serials">Сериалы</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="show_all">Показать все</string>
    <string name="next"><![CDATA[->]]></string>
    <string name="the_film_starred">В фильме снимались</string>
    <string name="the_film_worked">Над фильмом работали</string>
    <string name="Gallery">Галерея</string>
    <string name="gallery">Галерея\n</string>
    <string name="similar_movies">Похожие фильмы</string>
    <string name="frames">Кадры</string>
    <string name="аrom_filming">Со съемок</string>
    <string name="from_filming">Со съемок\n</string>
    <string name="posters">Постеры</string>
    <string name="the_best">Лучшее</string>
    <string name="filmography">Фильмография</string>
    <string name="to_list">К списку</string>
    <string name="films_actors_directors">Фильмы, актёры, режиссёры</string>
    <string name="palochka">|</string>
    <string name="actris">Актриса</string>
    <string name="dubbing_actress">Актриса дубляжа</string>
    <string name="actrees_play_yourself">Актриса: играет саму себя</string>
    <string name="nothing_in_search">К сожалению, по вашему запросу ничего не найдено</string>
    <string name="search_settings_text">Настройки поиска</string>
    <string name="show">Показывать</string>
    <string name="films">Фильмы</string>
    <string name="underlined_dynamic_text"><u>%s</u></string>
    <string name="country">Страна</string>
    <string name="russia">Россия</string>
    <string name="genre">Жанр</string>
    <string name="comedy">Комедия</string>
    <string name="year">Год</string>
    <string name="_1998_2017">с 1998 до 2017</string>
    <string name="rating">Рейтинг</string>
    <string name="any">любой</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="sort">Сортировать</string>
    <string name="date">Дата</string>
    <string name="dont_watched">Не просмотрен</string>
    <string name="enter_the_country">Введите страну</string>
    <string name="enter_the_genre">Введите жанр</string>
    <string name="period">Период</string>
    <string name="watched">Просмотрено</string>
    <string name="collections">Коллекции</string>
    <string name="marked_movies">Хочу посмотреть</string>
    <string name="favorite_movies">Любимые</string>
    <string name="sbros">Сброс</string>
    <string name="interested">Вам было интересно</string>
    <string name="insert_into_collection">Добавить в коллекцию</string>
    <string name="save">Сохранить</string>
    <string name="come_up_with_a_name_for_your_new_collection">Придумайте название для вашей новой коллекции</string>
    <string name="error">Ошибка!</string>
    <string name="choice">Выбрать</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="login">Войти</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="authorisation">Авторизация</string>
    <string name="login_str">Логин</string>
    <string name="password_str">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="registration">Регистрация</string>

</resources>