<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.homeScreens.ui.ImagesListPage">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_frames"
                android:layout_width="133dp"
                android:layout_height="36dp"
                android:background="?android:attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/frames"
                android:textAlignment="center"
                android:textColor="#000000"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipStrokeColor="#000000"
                app:chipStrokeWidth="0.8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filming"
                android:layout_width="159dp"
                android:layout_height="36dp"
                android:background="?android:attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/from_filming"

                android:textAlignment="center"
                android:textColor="#000000"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipStrokeColor="#000000"
                app:chipStrokeWidth="0.8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_posters"
                android:layout_width="143dp"
                android:layout_height="36dp"
                android:background="?android:attr/selectableItemBackground"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/posters"
                android:textAlignment="center"
                android:textColor="#000000"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipStrokeColor="#000000"
                app:chipStrokeWidth="0.8dp" />
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>